lab1/Test/L1-A-12-3.output
Error Type B at Line 7
Error Type B at Line 13
Error Type A at Line 19
Error Type A at Line 42
Error Type A at Line 55
