lab1/Test/L1-A-12-3.cmm
float L ( ) {
  struct xOn5Jdx366kV I1xzebGhR = T3Ls_gRiK = PE || 
    cmA1xytJytgJHRlQWCpj + UFVDRTVzCZL_ / - auUWemASBz 
    [ Sxe = pbWzkg2ZLWUk6duOAJZa = CS9pVI6zZPgJNq5eSpOm 
    && OaFBKso5E4MRiS5NBw <= RIzarFFt1KMAI ( lQVK1RpG4fnY 
    || _Dl != - ! - ( b8x_5k9V > ( Dbo87Kkzu1d == ( ( 
    naSv9r0Pu30UEhRlwoov * ( mfmCLt7 ( daaJG , ) ) ) . 
    k9p_2YLV9A ) >= vy1u7TCC + tXE8LMQ1JHwiYt < F14CwiYcpuiHeix9ztzS 
    ) . NHIvn8OKadl8 * 361057987 ) + 1197852108.517705033 
    . jX50DnYlZ - e7vnS0zGghS ) ] * ! DJ ( ) ;
}
int 
int iEr38EI_zeV57PdcM6O , ju6jwc4VwK5 [ 721485032 
  ] 

;
int ;
struct {
}';
int ;
struct YFlDP ;
struct _TwwCim5c6ZgcOrcaSp ;
int oqERgvypl 
;
int ;
int QF5IBk29NT 
;
int vciqTlpi09_uFOBc7y1 
;
struct LUd00Bugae2bMBB281L ;
int ;
struct c3FvObyquX6nv ;
int ;
struct dxfONUH ;
int ;
int ;
struct {
  int rXw7CGgayA7XNDfoib ;
  int uSmkI2w7AmItMP6_B ;
  struct m3yqeQly4Xx {
    int yaVBf85Q79ASWw6J5 ;
    struct S &rA6FRYeWMMZ ;
  }uSkUZAuTTmsorEv7I6F ;
  int Nu4JGeojRgLK8 ;
  struct BBv Uw0 , BeQ ;
};
int ;
int ;
int ;
int ;
int ;
int ;
int ;
int BLaS ( int tXJLwsOp1qyftZ_G8V , int rbQw ) {
  if ( tTESM )   MdLm `;
else   _7LxtVjGCu9b ;

  if ( Q0BWQnuMm )   return lRt7h_yugdqrIGD ;
else   if ( u6iV1UNvQ ) {
  }

  while ( zgrWBC_6 )   s5PmWwMnPhvU3MbONf ;

}
